# notify-sharp

./: .gitignore  Makefile.am  configure.ac  notify-sharp-3.0.pc.in  notify-sharp.doap
docs/: Makefile.am  notify-sharp-3-docs.source
src/: Makefile.am
