SUBDIRS = src docs

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = notify-sharp-3.0.pc

EXTRA_DIST = \
	notify-sharp-3.0.pc.in

DISTCLEANFILES = \
	notify-sharp-3.0.pc

MAINTAINERCLEANFILES = \
	INSTALL \
	Makefile.in \
	aclocal.m4 \
	config.guess \
	config.sub \
	configure \
	install-sh \
	missing

